# one-code

./: .gitignore  README.md  challenge_0c96eeff.py  challenge_20403ec6.py  challenge_45481699.py  challenge_5089386d.py  challenge_56de768a.py  challenge_9a8e0dcb.py  challenge_f49ff65a.py  ide_desktop.py  ide_native.py  ide_server.py  launch_ide.bat  main.py  main_mcp.py  main_mcp_sse.py  pyproject.toml  requirements.txt  session_state.json  test_diag.json  test_l4_selftest.py  tui.py  user_profile.json
agent/: __init__.py  checkpoint.py  constraints.py  contract_first.py  contract_generator.py  contract_types.py  diagnosis.py  evaluator.py  fix_history.py  goal_verifier.py  governance.py  hooks.py  loop.py  meta_optimize.py  models.py  observability.py  orchestrator.py  reverse_decomposer.py  root_cause.py  rules.py  self_repair.py  skills.py  specialists.py  subagent.py  token_optimizer.py  verify.py
ci/: dashboard.html  pipeline.py
docs/: contract-first-experiment.md  contract-first-job-brief.md  contract-first-results.md  index.html
eval/: __init__.py  challenge_eval.py  fast_eval.py  swebench_runner.py
ide/: index.html  style.css
llm/: __init__.py  base.py  deepseek_api.py  gemini_api.py  ollama.py  openai_api.py
mcp/: __init__.py  client.py  protocol.py  server.py  sse_client.py  sse_server.py  transport.py
memory/: __init__.py  context_boot.py  long_term.py  short_term.py  token_counter.py
one_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sandbox/: __init__.py  executor.py  fs_jail.py  policy.py
(+38 files in other folders)
